# hands-free-control

./: .gitignore  CLAUDE.md  Makefile  NOTES.md  README.md  budget.yaml  dvc.yaml  params.yaml  pyproject.toml
.claude/: skills
_meta/: index.md  log.md  token_log.ndjson
app/: README.md  headmouse.py  requirements.txt  setup.ps1
concepts/: appearance-based-gaze-estimation.md  application-context-scoping.md  area-cursor.md  assistive-hands-free-access.md  assistive-pointing-device.md  barge-in-turn-taking.md  bci-illiteracy.md  (+75 more)
experiments/2026-07-01-webcam-gaze-accuracy/: README.md  analyze.py  collect.py  config.yaml  log.md  metrics.json  notes.qmd  pyproject.toml  splits.yaml  synth.py
experiments/2026-07-01-webcam-gaze-accuracy/gazelib/: __init__.py  calibrate.py  dwell.py  features.py  geometry.py
experiments/2026-07-01-webcam-gaze-accuracy/results/: webgazer_compare_20260708-171609.json
experiments/2026-07-01-webcam-gaze-accuracy/results/session_web_20260702-003516/: calibration.jsonl  meta.json  test.jsonl  validation.jsonl
experiments/2026-07-01-webcam-gaze-accuracy/results/session_web_20260702-003616/: calibration.jsonl  meta.json  test.jsonl  validation.jsonl
webapp/: fetch_assets.py  pyproject.toml  serve.py
webapp/deploy/: README.md  hands-free-gaze.service
webapp/static/: app.js  fusion.html  fusion.js  fusion_solve.mjs  fusion_wg.html  fusion_wg.js  gestures.html  gestures.js  headmouse.html  headmouse.js  headpoint.html  headpoint.js  index.html  style.css  test_solve.mjs  voice.html  voice.js  webgazer_test.html  webgazer_test.js
(+127 files in other folders)
